--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="title_activity_circular_orbit">Órbita circular</string>
+    <string name="title_activity_elliptical_orbit">Órbita elíptica</string>
     <string name="title_activity_gravitation">Gravitación</string>
     <string name="title_activity_relativity">Relatividad</string>
+    <string name="title_activity_quantum">Cuántica</string>
 </resources>
